# boost-mil

./: CMakeLists.txt  README.md  index.html
doxygen/: generate.txt
doxygen/doc/html/: AdaBoost_8cpp_source.html  AdaBoost_8h_source.html  AvgClassifier_8cpp_source.html  AvgClassifier_8h_source.html  ClassifierFactory_8h_source.html  ClassifierInput_8h_source.html  MILClassifier_8cpp_source.html  MILClassifier_8h_source.html  OnlineBoost_8cpp_source.html  OnlineBoost_8h_source.html  OnlineSupport_8cpp_source.html  OnlineSupport_8h_source.html  SelectorClassifier_8cpp_source.html  SelectorClassifier_8h_source.html  StrongClassifier_8cpp_source.html  StrongClassifier_8h_source.html  WeakClassifier_8h_source.html  annotated.html  classes.html  classiCub_1_1boostMIL_1_1AdaBoost.html  classiCub_1_1boostMIL_1_1AvgClassifier.html  classiCub_1_1boostMIL_1_1ClassifierFactory.html  classiCub_1_1boostMIL_1_1MILClassifier.html  classiCub_1_1boostMIL_1_1OnlineBoost.html  classiCub_1_1boostMIL_1_1OnlineSupport.html  classiCub_1_1boostMIL_1_1SelectorClassifier.html  classiCub_1_1boostMIL_1_1StrongClassifier.html  classiCub_1_1boostMIL_1_1WeakClassifier.html  dir_05906369c2d654c318c8e5f0b9121080.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_7706fa3758ab12232cfaf1962d284f36.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  dir_e71cd8fcd235e4fb369ba65b13bae578.html  dir_f0ce595ec536a607538296da3a206f53.html  files.html  functions.html  functions_func.html  functions_vars.html  (+9 more)
doxygen/doc/latex/: annotated.tex  classiCub_1_1boostMIL_1_1AdaBoost.eps  classiCub_1_1boostMIL_1_1AdaBoost.tex  classiCub_1_1boostMIL_1_1AvgClassifier.eps  classiCub_1_1boostMIL_1_1AvgClassifier.tex  classiCub_1_1boostMIL_1_1ClassifierFactory.tex  classiCub_1_1boostMIL_1_1MILClassifier.eps  classiCub_1_1boostMIL_1_1MILClassifier.tex  classiCub_1_1boostMIL_1_1OnlineBoost.eps  classiCub_1_1boostMIL_1_1OnlineBoost.tex  classiCub_1_1boostMIL_1_1OnlineSupport.eps  classiCub_1_1boostMIL_1_1OnlineSupport.tex  classiCub_1_1boostMIL_1_1SelectorClassifier.eps  classiCub_1_1boostMIL_1_1SelectorClassifier.tex  classiCub_1_1boostMIL_1_1StrongClassifier.eps  classiCub_1_1boostMIL_1_1StrongClassifier.tex  classiCub_1_1boostMIL_1_1WeakClassifier.eps  classiCub_1_1boostMIL_1_1WeakClassifier.tex  dir_05906369c2d654c318c8e5f0b9121080.tex  dir_5a30104352ef4255dc24354b02eb2d20.tex  dir_7706fa3758ab12232cfaf1962d284f36.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_a065c5f60305fee3569f887679366939.tex  dir_e05d7e2b1ecd646af5bb94391405f3b5.tex  dir_e71cd8fcd235e4fb369ba65b13bae578.tex  dir_f0ce595ec536a607538296da3a206f53.tex  group__boostMIL.tex  hierarchy.tex  modules.tex  namespaceiCub.tex  namespaces.tex  refman.tex  (+2 more)
lib/: CMakeLists.txt
lib/include/iCub/boostMIL/: AdaBoost.h  AvgClassifier.h  ClassifierFactory.h  MILClassifier.h  OnlineBoost.h  OnlineSupport.h  SelectorClassifier.h  StrongClassifier.h  WeakClassifier.h
modules/: CMakeLists.txt
modules/boostMILExample/: CMakeLists.txt
modules/boostMILExample/src/: main.cpp
(+46 files in other folders)
